
[TestPane_View_EmptyState - 1]
╭────────────────────────────────────────────────╮
│Layers                                          │
│                                                │
│No layer data                                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯
---

[TestPane_View_WithLayers - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│[1/14] 28cfe03618aa    1.1 MB 0 0 0 #(nop) ADD f... 23bc2b70b201              │
│[2/14] 1871059774ab    6.3 KB +1 0 0 #(nop) ADD f... a65b7d7ac139             │
│[3/14] 49fe2a475548       0 B +1 0 0 mkdir -p /ro... 93e208d47175             │
│[4/14] 80cd2ca1ffc8    6.3 KB +1 0 0 cp /somefile... 4abad3abe3cb             │
│[5/14] c99e2f8d3f62    6.3 KB 0 ~1 0 chmod 444 /r... 14c9a6ffcb6a             │
│[6/14] 5eca617bdc3b    6.3 KB +1 0 0 cp /somefile... 778fb5770ef4             │
│[7/14] f07c3eb88757    6.3 KB +1 0 0 cp /somefile... f275b8a31a71             │
│[8/14] 461885fc2258    6.3 KB +1 0 -1 mv /root/exa... dd1effc5eb19            │
│[9/14] a10327f68ffe    6.3 KB +1 0 0 cp /root/sav... 8d1869a0a066             │
│[10/14] f2fc54e25cb7       0 B 0 0 -3 rm -rf /root... bc2e36423fa3            │
│[11/14] aad36d0b05e7    2.1 KB +2 0 0 #(nop) ADD d... 7f648d45ee7b            │
│[12/14] 3d4ad907517a    6.3 KB +1 0 0 cp /root/sav... a4b8f95f266d            │
│[13/14] 81b1b002d4b4    6.3 KB +1 0 0 cp /root/sav... 22a44d45780a            │
│[14/14] cfb35bb5c127    6.3 KB 0 ~1 0 chmod +x /ro... ba689cac6a98            │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_Focused - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│[1/14] 28cfe03618aa    1.1 MB 0 0 0 #(nop) ADD f... 23bc2b70b201              │
│[2/14] 1871059774ab    6.3 KB +1 0 0 #(nop) ADD f... a65b7d7ac139             │
│[3/14] 49fe2a475548       0 B +1 0 0 mkdir -p /ro... 93e208d47175             │
│[4/14] 80cd2ca1ffc8    6.3 KB +1 0 0 cp /somefile... 4abad3abe3cb             │
│[5/14] c99e2f8d3f62    6.3 KB 0 ~1 0 chmod 444 /r... 14c9a6ffcb6a             │
│[6/14] 5eca617bdc3b    6.3 KB +1 0 0 cp /somefile... 778fb5770ef4             │
│[7/14] f07c3eb88757    6.3 KB +1 0 0 cp /somefile... f275b8a31a71             │
│[8/14] 461885fc2258    6.3 KB +1 0 -1 mv /root/exa... dd1effc5eb19            │
│[9/14] a10327f68ffe    6.3 KB +1 0 0 cp /root/sav... 8d1869a0a066             │
│[10/14] f2fc54e25cb7       0 B 0 0 -3 rm -rf /root... bc2e36423fa3            │
│[11/14] aad36d0b05e7    2.1 KB +2 0 0 #(nop) ADD d... 7f648d45ee7b            │
│[12/14] 3d4ad907517a    6.3 KB +1 0 0 cp /root/sav... a4b8f95f266d            │
│[13/14] 81b1b002d4b4    6.3 KB +1 0 0 cp /root/sav... 22a44d45780a            │
│[14/14] cfb35bb5c127    6.3 KB 0 ~1 0 chmod +x /ro... ba689cac6a98            │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_SmallWidth - 1]
╭──────────────────────────────────────╮
│Layers                                │
│                                      │
│[1/14] 28cfe03618aa    1.1 MB 0 0 0 #(│
│[2/14] 1871059774ab    6.3 KB +1 0 0 #│
│[3/14] 49fe2a475548       0 B +1 0 0 m│
│[4/14] 80cd2ca1ffc8    6.3 KB +1 0 0 c│
│[5/14] c99e2f8d3f62    6.3 KB 0 ~1 0 c│
│[6/14] 5eca617bdc3b    6.3 KB +1 0 0 c│
│[7/14] f07c3eb88757    6.3 KB +1 0 0 c│
│[8/14] 461885fc2258    6.3 KB +1 0 -1 │
│[9/14] a10327f68ffe    6.3 KB +1 0 0 c│
│[10/14] f2fc54e25cb7       0 B 0 0 -3 │
│[11/14] aad36d0b05e7    2.1 KB +2 0 0 │
│[12/14] 3d4ad907517a    6.3 KB +1 0 0 │
│[13/14] 81b1b002d4b4    6.3 KB +1 0 0 │
│[14/14] cfb35bb5c127    6.3 KB 0 ~1 0 │
│                                      │
│                                      │
╰──────────────────────────────────────╯
---

[TestPane_View_SmallHeight - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│[1/14] 28cfe03618aa    1.1 MB 0 0 0 #(nop) ADD f... 23bc2b70b201              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_LargeSize - 1]
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                                                                │
│                                                                                                                      │
│[1/14] 28cfe03618aa    1.1 MB 0 0 0 #(nop) ADD f... 23bc2b70b201                                                      │
│[2/14] 1871059774ab    6.3 KB +1 0 0 #(nop) ADD f... a65b7d7ac139                                                     │
│[3/14] 49fe2a475548       0 B +1 0 0 mkdir -p /ro... 93e208d47175                                                     │
│[4/14] 80cd2ca1ffc8    6.3 KB +1 0 0 cp /somefile... 4abad3abe3cb                                                     │
│[5/14] c99e2f8d3f62    6.3 KB 0 ~1 0 chmod 444 /r... 14c9a6ffcb6a                                                     │
│[6/14] 5eca617bdc3b    6.3 KB +1 0 0 cp /somefile... 778fb5770ef4                                                     │
│[7/14] f07c3eb88757    6.3 KB +1 0 0 cp /somefile... f275b8a31a71                                                     │
│[8/14] 461885fc2258    6.3 KB +1 0 -1 mv /root/exa... dd1effc5eb19                                                    │
│[9/14] a10327f68ffe    6.3 KB +1 0 0 cp /root/sav... 8d1869a0a066                                                     │
│[10/14] f2fc54e25cb7       0 B 0 0 -3 rm -rf /root... bc2e36423fa3                                                    │
│[11/14] aad36d0b05e7    2.1 KB +2 0 0 #(nop) ADD d... 7f648d45ee7b                                                    │
│[12/14] 3d4ad907517a    6.3 KB +1 0 0 cp /root/sav... a4b8f95f266d                                                    │
│[13/14] 81b1b002d4b4    6.3 KB +1 0 0 cp /root/sav... 22a44d45780a                                                    │
│[14/14] cfb35bb5c127    6.3 KB 0 ~1 0 chmod +x /ro... ba689cac6a98                                                    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_SecondLayerSelected - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│[1/14] 28cfe03618aa    1.1 MB 0 0 0 #(nop) ADD f... 23bc2b70b201              │
│[2/14] 1871059774ab    6.3 KB +1 0 0 #(nop) ADD f... a65b7d7ac139             │
│[3/14] 49fe2a475548       0 B +1 0 0 mkdir -p /ro... 93e208d47175             │
│[4/14] 80cd2ca1ffc8    6.3 KB +1 0 0 cp /somefile... 4abad3abe3cb             │
│[5/14] c99e2f8d3f62    6.3 KB 0 ~1 0 chmod 444 /r... 14c9a6ffcb6a             │
│[6/14] 5eca617bdc3b    6.3 KB +1 0 0 cp /somefile... 778fb5770ef4             │
│[7/14] f07c3eb88757    6.3 KB +1 0 0 cp /somefile... f275b8a31a71             │
│[8/14] 461885fc2258    6.3 KB +1 0 -1 mv /root/exa... dd1effc5eb19            │
│[9/14] a10327f68ffe    6.3 KB +1 0 0 cp /root/sav... 8d1869a0a066             │
│[10/14] f2fc54e25cb7       0 B 0 0 -3 rm -rf /root... bc2e36423fa3            │
│[11/14] aad36d0b05e7    2.1 KB +2 0 0 #(nop) ADD d... 7f648d45ee7b            │
│[12/14] 3d4ad907517a    6.3 KB +1 0 0 cp /root/sav... a4b8f95f266d            │
│[13/14] 81b1b002d4b4    6.3 KB +1 0 0 cp /root/sav... 22a44d45780a            │
│[14/14] cfb35bb5c127    6.3 KB 0 ~1 0 chmod +x /ro... ba689cac6a98            │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_Update_WithLayoutMsg - 1]
╭────────────────────────────────────────────────╮
│Layers                                          │
│                                                │
│[1/14] 28cfe03618aa    1.1 MB 0 0 0 #(nop) ADD f│
│[2/14] 1871059774ab    6.3 KB +1 0 0 #(nop) ADD │
│[3/14] 49fe2a475548       0 B +1 0 0 mkdir -p /r│
│[4/14] 80cd2ca1ffc8    6.3 KB +1 0 0 cp /somefil│
│[5/14] c99e2f8d3f62    6.3 KB 0 ~1 0 chmod 444 /│
│[6/14] 5eca617bdc3b    6.3 KB +1 0 0 cp /somefil│
╰────────────────────────────────────────────────╯
---
